--- a/src/Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions/Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions.csproj
+++ b/src/Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions/Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions.csproj
@@ -10,7 +10,7 @@
     <NoWarn>CS1570;CS1571;CS1572;CS1573;CS1574;CS1591;$(NoWarn)</NoWarn>
     <EnableApiCheck>false</EnableApiCheck>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <UseSystemMemory>true</UseSystemMemory>
+    <UseSystemMemory>false</UseSystemMemory>
     <DefineConstants>$(DefineConstants);KESTREL_BY_SOURCE</DefineConstants>
     <DefineConstants Condition="'$(UseSystemMemory)' == 'true'">$(DefineConstants);SYSTEM_MEMORY</DefineConstants>
   </PropertyGroup>
